[gd_scene load_steps=20 format=2]

[ext_resource path="res://src/core/template.gd" type="Script" id=1]
[ext_resource path="res://views/editor/inspector/inspector.tscn" type="PackedScene" id=2]
[ext_resource path="res://views/editor/viewport/viewport.tscn" type="PackedScene" id=3]
[ext_resource path="res://views/editor/editor_view.gd" type="Script" id=4]
[ext_resource path="res://views/editor/add_node_panel.tscn" type="PackedScene" id=5]
[ext_resource path="res://icons/icon_replay.svg" type="Texture" id=6]
[ext_resource path="res://icons/icon_save.svg" type="Texture" id=7]
[ext_resource path="res://views/auto_scale.gd" type="Script" id=8]
[ext_resource path="res://views/editor/run_generation_button.gd" type="Script" id=9]
[ext_resource path="res://icons/icon_export.svg" type="Texture" id=10]
[ext_resource path="res://icons/icon_import.svg" type="Texture" id=11]
[ext_resource path="res://views/editor/common/icon_button.tscn" type="PackedScene" id=12]
[ext_resource path="res://icons/progress/progress_icon.tres" type="Texture" id=13]
[ext_resource path="res://icons/icon_add.svg" type="Texture" id=14]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="InputEventKey" id=2]
control = true
command = true
scancode = 83

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[sub_resource type="InputEventKey" id=4]
control = true
command = true
scancode = 82

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[node name="GraphEditorView" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
viewport_container = NodePath("VBoxContainer/HSplitContainer/HSplitContainer/Control/ViewportArea/ViewportContainer")
template = NodePath("VBoxContainer/HSplitContainer/HSplitContainer/Template")
add_node_dialog = NodePath("AddNodeDialog")
inspector = NodePath("VBoxContainer/HSplitContainer/Inspector")

[node name="VBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1366.0
margin_bottom = 768.0

[node name="ToolShelf" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 28.0
margin_bottom = 768.0
rect_min_size = Vector2( 28, 0 )
script = ExtResource( 8 )
min_size_x = true

[node name="AddNodes" parent="VBoxContainer/ToolShelf" instance=ExtResource( 12 )]
margin_right = 28.0
margin_bottom = 29.0
hint_tooltip = "Create a new node. You can right click anywhere in the graph editor to bring up this menu."
icon = ExtResource( 14 )

[node name="Save" parent="VBoxContainer/ToolShelf" instance=ExtResource( 12 )]
margin_top = 37.0
margin_right = 28.0
margin_bottom = 66.0
hint_tooltip = "Save the edited template to disk"
shortcut = SubResource( 3 )
icon = ExtResource( 7 )

[node name="RunGeneration" parent="VBoxContainer/ToolShelf" instance=ExtResource( 12 )]
margin_top = 74.0
margin_right = 28.0
margin_bottom = 103.0
hint_tooltip = "Force the editor to regenerate the final result. This should happen automatically when the template is updated."
shortcut = SubResource( 5 )
icon = ExtResource( 6 )
script = ExtResource( 9 )
normal_icon = ExtResource( 6 )
animated_icon = ExtResource( 13 )

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ToolShelf"]
margin_top = 111.0
margin_right = 28.0
margin_bottom = 119.0

[node name="ImportAll" parent="VBoxContainer/ToolShelf" instance=ExtResource( 12 )]
margin_top = 127.0
margin_right = 28.0
margin_bottom = 156.0
hint_tooltip = "Import All.
Request all the Import nodes to fetch their resources from disk again."
icon = ExtResource( 11 )

[node name="ExportAll" parent="VBoxContainer/ToolShelf" instance=ExtResource( 12 )]
margin_top = 164.0
margin_right = 28.0
margin_bottom = 193.0
hint_tooltip = "Export All.
Request all the export node to save their results on disk."
icon = ExtResource( 10 )

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
margin_left = 36.0
margin_right = 1366.0
margin_bottom = 768.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/autohide = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="VSplitContainer" parent="VBoxContainer/HSplitContainer"]
margin_right = 985.0
margin_bottom = 768.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
custom_constants/autohide = 0

[node name="Template" type="GraphEdit" parent="VBoxContainer/HSplitContainer/HSplitContainer"]
margin_right = 985.0
margin_bottom = 448.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5
right_disconnects = true
scroll_offset = Vector2( -12, -320 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
inspector_panel = NodePath("../../Inspector")

[node name="Control" type="Control" parent="VBoxContainer/HSplitContainer/HSplitContainer"]
margin_top = 472.0
margin_right = 985.0
margin_bottom = 768.0
size_flags_vertical = 3
__meta__ = {
"_editor_description_": "Hack to make it possible to completely hide the viewport when dragging the hsplit all the way down."
}

[node name="ViewportArea" parent="VBoxContainer/HSplitContainer/HSplitContainer/Control" instance=ExtResource( 3 )]

[node name="Inspector" parent="VBoxContainer/HSplitContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1009.0
margin_right = 1330.0
margin_bottom = 768.0

[node name="AddNodeDialog" parent="." instance=ExtResource( 5 )]
margin_left = 7.0
margin_top = 7.0
margin_right = 519.0
margin_bottom = 407.0
[connection signal="pressed" from="VBoxContainer/ToolShelf/AddNodes" to="." method="_show_node_dialog_centered"]
[connection signal="pressed" from="VBoxContainer/ToolShelf/Save" to="." method="save_template"]
[connection signal="pressed" from="VBoxContainer/ToolShelf/RunGeneration" to="." method="regenerate"]
[connection signal="pressed" from="VBoxContainer/ToolShelf/ImportAll" to="VBoxContainer/HSplitContainer/HSplitContainer/Template" method="_on_import_all"]
[connection signal="pressed" from="VBoxContainer/ToolShelf/ExportAll" to="VBoxContainer/HSplitContainer/HSplitContainer/Template" method="_on_export_all"]
[connection signal="exposed_variables_updated" from="VBoxContainer/HSplitContainer/HSplitContainer/Template" to="." method="_on_exposed_variables_updated"]
[connection signal="graph_changed" from="VBoxContainer/HSplitContainer/HSplitContainer/Template" to="." method="_on_graph_changed"]
[connection signal="input_created" from="VBoxContainer/HSplitContainer/HSplitContainer/Template" to="." method="_on_input_created"]
[connection signal="input_deleted" from="VBoxContainer/HSplitContainer/HSplitContainer/Template" to="." method="_on_input_deleted"]
[connection signal="popup_request" from="VBoxContainer/HSplitContainer/HSplitContainer/Template" to="." method="_show_node_dialog"]
[connection signal="simulation_completed" from="VBoxContainer/HSplitContainer/HSplitContainer/Template" to="." method="_on_simulation_completed"]
[connection signal="simulation_completed" from="VBoxContainer/HSplitContainer/HSplitContainer/Template" to="VBoxContainer/ToolShelf/RunGeneration" method="_on_simulation_completed"]
[connection signal="simulation_outdated" from="VBoxContainer/HSplitContainer/HSplitContainer/Template" to="." method="_on_simulation_outdated"]
[connection signal="simulation_started" from="VBoxContainer/HSplitContainer/HSplitContainer/Template" to="VBoxContainer/ToolShelf/RunGeneration" method="_on_simulation_started"]
[connection signal="value_changed" from="VBoxContainer/HSplitContainer/Inspector" to="." method="_on_inspector_value_changed"]
[connection signal="create_node" from="AddNodeDialog" to="." method="_on_create_node_request"]
